# bin2whl

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
bin2whl/: __init__.py  __main__.py  argbuilder.py  cli.py  config.py  metadata.py  version.py  wheel_builder.py
docs/: docinfo.json  mkdocs.yml
docs/mkdocs/: cli.md  config.md  index.md  license.md
