[project]
name = "bin2whl"
dynamic = ["version"]
description = "Build Python wheels from pre-compiled binaries"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
license = "Unlicense"
authors = [
    { name = "WaterJuice" },
]
keywords = ["python", "wheel", "binary", "packaging", "cli", "pypi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/WaterJuice/bin2whl"

[project.scripts]
bin2whl = "bin2whl.cli:main"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
pattern = "default-unprefixed"

[tool.hatch.build]
# Include _version.py in builds even though it's gitignored (generated at build time)
artifacts = ["bin2whl/_version.py"]

[tool.hatch.build.targets.wheel]
packages = ["bin2whl"]

[tool.cal-publish-python]
profile = "waterjuice"

[tool.uv]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["F", "E", "W", "I", "Q", "B", "TC", "UP"]
ignore = ["E501", "B009", "B010", "UP036", "TC001", "TC003"]

[tool.ruff.lint.isort]
no-lines-before = ["future", "standard-library", "third-party", "first-party", "local-folder"]
force-single-line = true

[tool.pyright]
typeCheckingMode = "strict"
reportUnusedImport = "error"
pythonVersion = "3.12"

[dependency-groups]
dev = [
    "ruff",
    "pyright[nodejs]",
    "cal-mkdocs",
    "cal-publish-python>=0.4.0",
]
